# builddemo

./: README.md
c/: CMakeLists.txt  main.c
c_plus/: README.md
c_plus/cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  main.vcxproj  main.vcxproj.filters
c_plus/cmake/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
c_plus/cmake/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
c_plus/cmake/shareadlib/: build.bat  cmake_install.cmake
c_plus/cmake/shareadlib/Debug/: shareadlib.ilk
c_plus/cmake/staticlib/: staticlib.cpp  staticlib.vcxproj.filters
c_plus/mk/jni/: Android.mk  Application.mk  install.bat  main.cpp
cmake/: CMakeLists.txt
cmake/shareadlib/: CMakeLists.txt  shareadlib.cpp  shareadlib.h  shareadlib.vcxproj  shareadlib.vcxproj.filters
cmake/shareadlib/shareadlib.dir/Debug/shareadlib.tlog/: CL.command.1.tlog  link.read.1.tlog
cmake/staticlib/: CMakeLists.txt  cmake_install.cmake  staticlib.h  staticlib.vcxproj
cmake/staticlib/Debug/: staticlib.lib
cmake/staticlib/staticlib.dir/Debug/staticlib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cmake_android/: CMakeLists.txt  build.bat  build.sh  install.bat  install.sh  main.cpp
mk/jni/: Android.mk  build.bat
mk/libs/arm64-v8a/: snpe-sample
mk/libs/armeabi-v7a/: snpe-sample
(+7 files in other folders)
